[tool.poetry]
name = "om-performance-monitor"
version = "0.1.0"
description = "Client to measure and log performance"
authors = ["Austin Nieset <austin.nieset@getordermark.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
